ccargo-features = ["open-namespaces"]

[package]
name = "kourain_macro"
version = "1.0.2"
edition = "2024"
authors = ["kourain <maiquyen16503@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "kourain extensions helper"
readme = "README.md"
homepage = "https://github.com/kourain/kourain_macros"
repository = "https://github.com/kourain/kourain_cores"
keywords = ["kourain"]
categories = ["command-line-utilities"]

[lib]
proc-macro = true

[dependencies]
kourain_core = "1"
syn = { version = "2" }
quote = "1"
proc-macro2 = "1"
bytebuffer = "2"
regex = "1"